<resources>
    <string name="app_name">reflexit</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="label_email">Invalid Email Format</string>
    <string name="label_password">This field is required</string>
    <string name="label_form">Wrong UserName or Password</string>
    <string name="label_login_form">Wrong email or password</string>
    <string name="btn_login_text">login</string>
    <string name="btn_register_text">SIGNUP NOW</string>
    <string name="hint_name">username</string>
    <string name="label_name">this field is required</string>
    <string name="label_password_confirm">password mismatch</string>
    <string name="btn_register">Register</string>
    <string name="hint_password_confirm">Password confirm</string>
    <string name="action_settings">Settings</string>
    <string name="age_under_18">age: under 18</string>
    <string name="age_18_24">age: 18–24</string>
    <string name="age_25_34">age: 25–34</string>
    <string name="age_35_44">age: 35–44</string>
    <string name="age_45_54">age: 45–54</string>
    <string name="age_55_64">age: 55–64</string>
    <string name="age_over_64">age: 65+</string>
    <string name="ethnicity_caucasian">Caucasian</string>
    <string name="ethnicity_black_african">Black African</string>
    <string name="ethnicity_east_asian">East Asian</string>
    <string name="ethnicity_south_asian">South Asian</string>
    <string name="ethnicity_hispanic">Hispanic</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="registration">Registration</string>
    <string name="sign_up">SIGN UP</string>
    <string name="reflex">REFLEX</string>
    <string name="it">it</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="activities">Activities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="recipes">Recipes</string>
    <string name="build_a_recipe">Build an event flow to</string>
    <string name="flow_description">Description</string>
    <string name="submit">submit</string>
    <string name="with_the_following">With the following</string>
    <string name="skip">skip</string>
    <string name="choose_a_reflex">Choose a reflex</string>
    <string name="result_statement">Result Statement</string>
    <string name="description">Description</string>
    <string name="create">create</string>
    <string name="close">close</string>
    <string name="facebook_app_id">294478767901369</string>
    <string name="fb_login_protocol_scheme">fb294478767901369</string>
    <string name="works_with">works with</string>
    <string name="apps">Apps</string>
    <string name="settings">App Settings</string>
</resources>
