<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/form_login"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".authentications.login.LoginActivity"
        android:padding="50dp"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="3dp"
                android:background="@color/colorAccent"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/reflex"
                android:letterSpacing="0.1"
                android:textSize="20sp"
                android:textColor="#ffff"
                android:layout_marginStart="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/it"
                android:letterSpacing="0.1"
                android:textSize="15sp"
                android:textColor="#ffff"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/login"
            android:letterSpacing="0.1"
            android:textSize="47sp"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:layout_marginTop="15dp"/>
        
        
        <ImageView
            android:layout_width="130dp"
            android:layout_height="6dp"
            android:background="#fff"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/todo" />

        <EditText
        android:id="@+id/text_email"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:padding="15dp"
        tools:targetApi="o" />


        <TextView
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:visibility="invisible"
        android:text="@string/label_email"
        />


        <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColorHint="@color/colorWhite"
        android:inputType="textPassword"
        android:padding="15dp"
        android:importantForAutofill="no"
        android:textColor="@color/colorWhite"
        android:backgroundTint="@color/colorUnderline"
        android:fontFamily="sans-serif-light"
        tools:targetApi="o" />


        <TextView
        android:id="@+id/label_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        android:textColor="@color/colorAccent"
        android:fontFamily="sans-serif-light"
        android:visibility="invisible"
        android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_register_text"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:textAlignment="viewEnd"
                android:layout_height="wrap_content"
                android:text="@string/login_now"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-light"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/label_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_login_form"
            android:textColor="@color/colorAccent"
            android:visibility="invisible"
            android:textSize="12sp"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />


</RelativeLayout>
