<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ResultActivity"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_ratings_96px"
                android:scaleType="center"
                android:paddingEnd="10dp"
                android:background="@drawable/image_circle_background"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:text="@string/result_statement"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/text_statement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textAlignment="center" />


            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:hint="@string/description"
                android:fontFamily="sans-serif"
                android:background="@drawable/cornered_background"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                />

            <Button
                android:id="@+id/btn_create"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_primary_button"
                android:text="@string/create"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/btn_close"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_secondary_button"
                android:text="@string/close"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>