<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriggerConfigActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:padding="20dp"
    android:scrollbars="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icons_filter_100px"
                android:paddingTop="15dp"
                android:scaleType="center"
                android:background="@drawable/image_circle_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.1"
                android:text="@string/with_the_following"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <LinearLayout
                android:layout_marginTop="30dp"
                android:id="@+id/layout_constraints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">
            </LinearLayout>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/selector_primary_button"/>

            <Button
                android:id="@+id/btn_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/selector_secondary_button"/>
        </LinearLayout>

    </ScrollView>



</LinearLayout>